@@ -5,6 +5,7 @@ import com.aiscaffolder.aiscaffolder.application.services.ApiGenerationService;
 import com.aiscaffolder.aiscaffolder.domain.dto.AiChatRequestDto;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -14,6 +15,7 @@ import java.util.Map;
 
 @RestController
 @RequestMapping("/api/v1/ai")
+@Slf4j
 public class ProjectJsonSchemaGenerationController {
     @Autowired
     private ApiGenerationService apiGenerationService;
@@ -25,14 +27,23 @@ public class ProjectJsonSchemaGenerationController {
     public ResponseEntity<Map<String, Object>> generateJsonFromAI(@RequestBody AiChatRequestDto aiChatRequestDto) throws JsonProcessingException {
         Map<String, Object> aiGeneratedData = apiGenerationService.generateAIJson(aiChatRequestDto.getContent());
 
+        log.info(aiGeneratedData.toString());
+
         String result = "";
 
         List<Map<String, Object>> candidates = (List<Map<String, Object>>) aiGeneratedData.get("candidates");
         if (candidates != null && !candidates.isEmpty()) {
-            Map<String, Object> content = (Map<String, Object>) candidates.get(0).get("content");
-            List<Map<String, Object>> parts = (List<Map<String, Object>>) content.get("parts");
-            if (parts != null && !parts.isEmpty()) {
-                result = (String) parts.getFirst().get("text");
+            Object contentObj = candidates.getFirst().get("content");
+            if (contentObj instanceof Map<?, ?> content) {
+                Object partsObj = content.get("parts");
+                if (partsObj instanceof List<?> parts && !parts.isEmpty()) {
+                    Object textObj = ((Map<?, ?>) parts.getFirst()).get("text");
+                    if (textObj instanceof List<?> textList && !textList.isEmpty()) {
+                        result = textList.getFirst().toString();
+                    } else if (textObj instanceof String text) {
+                        result = text;
+                    }
+                }
             }
         }
 
